# hello_cmake

./: .gitignore  CMakeLists.txt  main.cpp
examples/: exec_module1.cpp  exec_module1_module2.cpp
modules/module1/: CMakeLists.txt
modules/module1/include/module1/: ClassMat.hpp
modules/module1/src/: ClassMat.cpp
modules/module2/: CMakeLists.txt
modules/module2/include/module2/: ClassEigenMat.hpp
modules/module2/src/: ClassEigenMat.cpp
